[FIX] Added EmptyContainer in WorkspaceModal if no member yet in a workspace. Fixed createdBy not showing the creator in EventsModal.

--- a/lumify.app/app/(app)/Dashboard/components/Workspaces/components/WorkspaceModal/components/MemberList/MemberList.module.css
+++ b/lumify.app/app/(app)/Dashboard/components/Workspaces/components/WorkspaceModal/components/MemberList/MemberList.module.css
@@ -35,3 +35,22 @@
 }
 
 
+.empty {
+    display: flex;
+
+    margin: 10px 12px 0;
+    padding: 7px 10px;
+
+    align-content: center;
+
+    border-radius: 10px;
+    border: 1px solid rgba(255, 1, 1, 0.45);
+
+    background-color: rgba(255, 1, 1, 0.25);
+    color: #000;
+
+    opacity: 0.8;
+    box-sizing: border-box;
+}
+
+
